--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -74,16 +74,22 @@
         </div>
 
         <div class="home-about-section">
-            Since GIF files are often enormous, GifCache does not actually store the file itself.
-            You enter the GIF's URL, label it if you want, and add some tags to categorize it.  A small thumbnail is generated from
-            the URL and displayed initially on a user's profile.  The full GIF is only loaded when the
-            thumbnail element is focused on.
+            Ever had the perfect GIF in mind for an occasion, but couldn't remember the URL or where you saw it?
+            GifCache is an easy way to keep track of those images so you'll never miss another opportunity to deploy
+            the ideal reaction GIF or share some adorable puppies.
+            <br><br>
+            Using GifCache there is no need to save images to your hard drive or to keep an unorganized list of URLs
+            in a text file somewhere.  Simply point your browser to your GifCache profile and your collection is immediately
+            accessible.
         </div>
 
         <div class="home-about-section">
-            Be aware that when using GifCache and viewing numerous GIFs, bandwidth usage
+            A note on using GifCache - when viewing numerous GIFs bandwidth usage
             can easily hit hundreds of megabytes very quickly.
+        </div>
 
+        <div class="home-about-section">
+            GifCache is written in Python utilizing the Django web framework.
             <a href="https://github.com/kershner/gifcache" class="code-link-wrapper animate">
                 <div class="code-link animate">
                         <i class="fa fa-github"></i>
