--- a/gifcache/static/css/main.css
+++ b/gifcache/static/css/main.css
@@ -686,6 +686,7 @@ select:hover {
 	margin: 0 auto;
 	width: 100%;
 	text-align: center;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
 .home-section-grey {
@@ -757,7 +758,7 @@ select:hover {
 	position: relative;
 	text-align: center;
 	color: white;
-	text-shadow: 1px 1px 3px #000;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 	font-size: 1.2em;
 }
 
@@ -792,14 +793,16 @@ select:hover {
 	font-size: 1.75em;
 	font-family: 'PT Sans', sans-serif;
 	color: white;
-	background-color: rgba(255, 255, 255, 0.2);
+	background-color: rgba(255, 255, 255, 0.1);
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+	border-bottom: .2em solid white;
 	border-radius: .15em;
 }
 
 .home-btn:hover {
 	transform: scale(1.1);
 	background-color: #25B972;
+	border-bottom: .19em solid #25B972;
 }
 
 .home-btn:active {
@@ -886,6 +889,7 @@ select:hover {
 	position: relative;
 	margin: 2em auto;
 	text-align: left;
+	text-shadow: rgba(0, 0, 0, 0.2);
 }
 
 .home-about-title {
