--- a/gifcache/templates/base.html
+++ b/gifcache/templates/base.html
@@ -89,7 +89,7 @@
     <div class="loading-wrapper hidden">
         <div class="loading">
             <i class="fa fa-spinner fa-pulse"></i>
-            <div>Processing image, one moment please...</div>
+            <div>Processing, one moment please...</div>
         </div>
     </div>
 
