Basic pagination for GifGrabber results added

--- a/gifcache/templates/base.html
+++ b/gifcache/templates/base.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- CSS -->
+        <link rel="stylesheet" href="{% static '/static/css/jPages.css' %}">
         <link rel="stylesheet" href="{% static '/static/css/main.css' %}">
 
         <!-- Fonts -->
@@ -97,6 +98,7 @@
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.0/isotope.pkgd.min.js"></script>
     <script type="text/javascript" src="{% static '/static/js/packery-mode.pkgd.min.js' %}"></script>
+    <script type="text/javascript" src="{% static '/static/js/jPages.min.js' %}"></script>
     <script type="text/javascript" src="{% static '/static/js/main.js' %}"></script>
     <script>
         $(document).ready(function () {
