--- a/gifcache/templates/users/view.html
+++ b/gifcache/templates/users/view.html
@@ -345,9 +345,10 @@
 
                 <div class="gifgrabber-results animate hidden">
                     <div class="grabber-results-page-title">Results</div>
-                    <div class="grabber-new-search btn blue-btn">New Search</div><div class="grabber-next-page btn green-btn">Next Page</div>
+                    <div class="grabber-new-search btn blue-btn">New Search</div>
 
-                    <div class="grabber-results-grid"></div>
+                    <div class="holder"></div>
+                    <div id="grabber-results" class="grabber-results-grid"></div>
                 </div>
             </div>
         </div>
