--- a/gifcache/static/css/main.css
+++ b/gifcache/static/css/main.css
@@ -1845,7 +1845,7 @@ select:hover {
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
 
-.grabber-results-element img {
+.grabber-results-element img, .grabber-results-element video {
 	width: 8em;
 	height: 8em;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
