--- a/gifcache/templates/users/view.html
+++ b/gifcache/templates/users/view.html
@@ -335,6 +335,7 @@
         <div class="gifgrabber-form-wrapper hidden">
             <div class="gifgrabber-container main-form animate">
                 <h1 class="title">GifGrabber</h1>
+                <div id="grabber-error" class="message hidden"></div>
 
                 <form class="gifgrabber-form">
                     <input class="main-field subreddit-field animate" type="text" name="subreddit" maxlength="40" placeholder="/r/">
@@ -344,7 +345,6 @@
                 </form>
 
                 <div class="gifgrabber-results animate hidden">
-                    <div class="grabber-results-page-title">Results</div>
                     <div class="grabber-new-search btn blue-btn">New Search</div>
 
                     <div class="holder"></div>
