--- a/gifcache/templates/users/view.html
+++ b/gifcache/templates/users/view.html
@@ -350,6 +350,13 @@
                     <div class="holder"></div>
                     <div id="grabber-results" class="grabber-results-grid"></div>
                 </div>
+
+                <div id="grabber-loading" class="loading-wrapper hidden">
+                    <div class="loading">
+                        <i class="fa fa-spinner fa-pulse"></i>
+                        <div>Processing, one moment please...</div>
+                    </div>
+                </div>
             </div>
         </div>
     {% endif %}
