--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -10,12 +10,14 @@
 
     <div class="slogan transparent animate">Store, organize, and display your favorite GIFs</div>
 
-    <div id="home-links" class="transparent animate">
-        <a href="{% url 'registration_register' %}"><div class="home-btn animate-fast">Sign Up</div></a>
-        <a href="{% url 'home:login' %}"><div class="home-btn animate-fast">Log In</div></a>
-    </div>
+    <div class="home-links-wrapper animate transparent">
+        <div id="home-links" class="animate">
+            <a href="{% url 'registration_register' %}"><div class="home-btn animate-fast">Sign Up</div></a>
+            <a href="{% url 'home:login' %}"><div class="home-btn animate-fast">Log In</div></a>
+        </div>
 
-    <i class="home-arrow fa fa-chevron-down levitate transparent animate"></i>
+        <i class="home-arrow fa fa-chevron-down levitate transparent animate"></i>
+    </div>
 </div>
 
 <div class="home-section-grey">
