--- a/gifcache/templates/base.html
+++ b/gifcache/templates/base.html
@@ -86,7 +86,7 @@
         </div>
     </div>
 
-    <div class="loading-wrapper hidden">
+    <div class="loading-wrapper main-loading hidden">
         <div class="loading">
             <i class="fa fa-spinner fa-pulse"></i>
             <div>Processing, one moment please...</div>
