--- a/gifcache/templates/base.html
+++ b/gifcache/templates/base.html
@@ -93,9 +93,20 @@
         </div>
     </div>
 
+    <div class="party-mode-wrapper animate-slow hidden">
+        <div class="party-mode-cancel animate">
+            <div>Cancel Party Mode</div>
+            <i class="fa fa-times"></i>
+        </div>
+
+        <div class="party-mode-container">
+        </div>
+    </div>
+
     <!-- JavaScripts -->
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.0/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.3.2/randomColor.min.js"></script>
     <script type="text/javascript" src="{% static '/static/js/packery-mode.pkgd.min.js' %}"></script>
     <script type="text/javascript" src="{% static '/static/js/jPages.min.js' %}"></script>
     <script type="text/javascript" src="{% static '/static/js/main.js' %}"></script>
