--- a/gifcache/templates/users/view.html
+++ b/gifcache/templates/users/view.html
@@ -136,17 +136,23 @@
                 <a class="anchor" name="{{ entry.0 }}"></a>
                 <div class="tag-title animate-bg">{{ entry.0 }}</div>
 
-                {% if can_edit %}
                 <i class="fa fa-cog tag-settings-icon animate-fast"></i>
 
                 <div class="tag-manager hidden">
                     <div class="tag-manager-options">
                         <div class="tag-manager-title">Tag Options</div>
+                        {% if can_edit %}
                         <div class="rename btn green-btn">Rename</div>
                         <div class="delete btn red-btn">Delete</div>
+                        {% endif %}
+                        <div class="party-mode-icon animate">
+                            <img src="/static/img/disco_kid.gif">
+                            <div class="party-mode-icon-text animate">Party Mode</div>
+                        </div>
                     </div>
 
                     <div class="tag-manager-form">
+                        {% if can_edit %}
                         <form class="rename-tag-form hidden" action="{% url 'users:rename-tag' %}" method="post">
                             <div class="tag-manager-options-title">Rename Tag</div>
 
@@ -168,9 +174,9 @@
                             <input type="submit" class="btn red-btn" value="Delete">
                             <div class="label gif-grid-element-delete-label" style="text-align: center; left: 0;">This cannot be undone</div>
                         </form>
+                        {% endif %}
                     </div>
                 </div>
-                {% endif %}
 
                 {% for object in entry.1 %}
                     <div class="gif-grid-element animate-fast">
@@ -334,11 +340,16 @@
     {% if can_edit %}
         <div class="gifgrabber-form-wrapper hidden">
             <div class="gifgrabber-container main-form animate">
-                <h1 class="title gifgrabber-title">GifGrabber</h1>
+                <div class="gifgrabber-title"><div style="font-family: 'PT Sans';">GIF</div>Grabber</div>
+                <div class="gifgrabber-title-blurb">Grab GIFs directly from your favorite subreddit</div>
+
                 <div id="grabber-error" class="message hidden"></div>
 
                 <form class="gifgrabber-form">
-                    <div class="subreddit-suggestions animate"></div>
+                    <div class="subreddit-suggestions animate">
+                        <div class="suggestions-title">Subreddit Suggestions</div>
+                        <div class="suggestions"></div>
+                    </div>
 
                     <input class="main-field subreddit-field animate" type="text" name="subreddit" maxlength="40" placeholder="/r/">
                     <div class="label">Subreddit</div>
@@ -359,7 +370,7 @@
                 <div class="gifgrabber-results animate hidden">
                     <div class="grabber-new-search btn blue-btn">New Search</div>
 
-                    <div class="grabber-selected-gifs hidden">
+                    <div class="grabber-selected-gifs pulse hidden">
                         <div class="selected-gifs-number animate"></div>
                         <div class="selected-gifs-blurb">GIFs Selected</div>
                     </div>
