--- a/gifcache/static/css/main.css
+++ b/gifcache/static/css/main.css
@@ -1338,9 +1338,16 @@ select:hover {
 }
 
 .gif-grid i {
-	margin: 0;
+	margin: 0;	
 	display: inline-block;
-	font-size: 1.25em;
+	font-size: 1.25em;	
+}
+
+.gif-grid-icon {
+	padding: .25em;
+	background-color: rgba(0, 0, 0, 0.6);
+	border-radius: 50%;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
 
 /* Icons inside each Gif thumbnail */
@@ -1361,7 +1368,7 @@ select:hover {
 
 .gif-expand:hover, .copy-url:hover {
 	cursor: pointer;
-	color: #4c4c4c;
+	transform: scale(1.2);
 }
 
 .delete-form {
@@ -1923,9 +1930,13 @@ select:hover {
 }
 
 .gifgrabber-expanded {
+	position: absolute;
+	left: 0;
+	right: 0;
 	top: -5%;
 	max-width: 35em;
-	min-height: 5em;
+	max-height: 80%;
+	overflow: auto;
 }
 
 .gifgrabber-form {
@@ -1944,14 +1955,18 @@ select:hover {
 }
 
 .subreddit-suggestions {
+	display: inline-block;
 	position: relative;
-	padding-top: .25em;
-	margin-top: 1em;
+	padding: .35em;
+	padding-top: .5em;
+	margin-bottom: 1em;
+	border-radius: .25em;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
 
 .suggestions-title {
 	position: absolute;
-	top: -.75em;
+	top: -.65em;
 	left: 0;
 	right: 0;
 	margin: 0 auto;
@@ -1999,6 +2014,27 @@ select:hover {
 	position: relative;
 	margin: 0 auto;
 	padding: .1em;
+}
+
+.grabber-lightbox {
+	position: absolute;
+	z-index: 6;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.6);
+}
+
+.grabber-expanded {
+	position: relative;
+	margin-top: 25%;
+	max-width: 100%;
+}
+
+.grabber-lightbox-label {
+	padding: 1em;
+	background-color: rgba(0, 0, 0, 0.9);
 }
 
 .grabber-results-element-inner {
@@ -2094,18 +2130,40 @@ select:hover {
 
 .grabber-results-extension {
 	position: absolute;
+	display: inline-block;
+	padding: .75em .25em;
 	z-index: 2;
+	min-width: 2.5em;
 	top: .25em;
 	right: .25em;
-	width: 3em;
-	height: 2.5em;
-	line-height: 2.5em;
-	background-color: #25B972;
-	border: .15em solid white;
+	background-color: rgba(0, 0, 0, 0.7);
 	border-radius: 50%;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 	font-size: .75em;
 	color: white;
+}
+
+.short-link, .grabber-expand {
+	position: absolute;
+	padding: .15em;
+	z-index: 2;
+	top: .2em;
+	right: 2.1em;
+	font-size: 1.25em;
+	color: white;
+	background-color: rgba(0, 0, 0, 0.6);
+	border-radius: 50%;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+}
+
+.short-link:hover, .grabber-expand:hover {
+	transform: scale(1.5);
+}
+
+.grabber-expand {
+	padding: .35em;
+	right: 4.8em;
+	top: .3em;
 }
 
 .grabber-selected-gifs {
