Some bug fixes and style tweaks.  Added favicon

--- a/gifcache/templates/base.html
+++ b/gifcache/templates/base.html
@@ -6,6 +6,9 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" href="{% static '/static/img/favicon.png' %}">
+
         <!-- CSS -->
         <link rel="stylesheet" href="{% static '/static/css/main.css' %}">
 
