--- a/gifcache/templates/users/view.html
+++ b/gifcache/templates/users/view.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="gifgrabber-btn btn inner-nav-btn red-btn">
-            GifGrabber
+            Gif<div class="lobster">Grabber</div>
         </div>
         {% endif %}
 
@@ -383,11 +383,10 @@
                         <input id="gifgrabber-values" name="values" type="text" class="hidden">
                         <input type="text" value="{{ user_id }}" name="user_id" class="hidden">
                         <input type="submit" class="btn green-btn grabber-add-gifs-btn" value="Add Gifs">
+                        <div class="holder"></div>
                     </form>
 
                     <div id="grabber-results" class="grabber-results-grid"></div>
-
-                    <div class="holder"></div>
                 </div>
 
                 <div id="grabber-loading" class="loading-wrapper hidden">
