--- a/gifcache/static/css/main.css
+++ b/gifcache/static/css/main.css
@@ -32,9 +32,7 @@ input {
 
 select {
 	-webkit-appearance: none;
-	width: 90%;
-	max-width: 15em;
-	min-width: 11.5em;
+	width: 6em;
 	height: 2.75em;
 	line-height: 2.75em;
 	font-size: 1.25em;
@@ -87,10 +85,6 @@ select:hover {
 	border-radius: .2em;
 }
 
-.hidden {
-	display: none !important;
-}
-
 .transparent {
 	opacity: 0;
 }
@@ -101,6 +95,11 @@ select:hover {
 	padding: .25em;
 	text-align: center;
 	font-size: .8em;
+}
+
+.lobster {
+	display: inline-block;
+	font-family: 'Lobster', cursive;
 }
 
 .errorlist li {
@@ -181,7 +180,7 @@ select:hover {
 	display: block;
 	position: relative;
 	margin: 1.25em auto;
-	bottom: .5em;
+	bottom: .8em;
 	text-align: center;
 	color: white;
 	font-size: .75em;
@@ -542,23 +541,23 @@ select:hover {
 }
 
 .red-btn {
-	background-color: #ff3434;
-	box-shadow: 0px 6px 0px #ff0101;
+	background-color: #ff4e4e;
+	box-shadow: 0px 6px 0px #ff3535;
 }
 
 .red-btn:hover {
-	background-color: #ff0101;
-	box-shadow: 0px 6px 0px #e70000;
+	background-color: #ff3535;
+	box-shadow: 0px 6px 0px #ff1c1c;
 }
 
 .red-btn:active, .red-btn-selected {
-	background-color: #ff0101;
-	box-shadow: 0px 2px 0px #e70000;
+	background-color: #ff1c1c;
+	box-shadow: 0px 2px 0px #ff0202;
 }
 
 .red-btn-selected:hover {
-	background-color: #e70000;
-	box-shadow: 0px 2px 0px #b40000;
+	background-color: #e80000;
+	box-shadow: 0px 2px 0px #cf0000;
 }
 
 .yellow-btn {
@@ -1008,8 +1007,9 @@ select:hover {
 }
 
 .home-plug {
-	margin: .25em auto;
+	margin: 0 auto;
 	margin-top: 5em;
+	padding-bottom: .5em;
 	width: 15em;
 	color: white;
 	text-shadow: 1px 1px 3px #000;
@@ -1140,7 +1140,7 @@ select:hover {
 
 .inner-nav-btn {
 	display: inline-block;
-	margin: .25em auto;
+	margin: .3em auto;
 	padding: .3em .75em;
 	position: relative;
 	width: 5em;
@@ -1301,6 +1301,7 @@ select:hover {
 	background-color: #F2F2F2;
 	font-size: 1.25em;
 	color: white;
+	text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
 	border-radius: .25em;
 	border: .1em solid white;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
@@ -1970,7 +1971,7 @@ select:hover {
 	left: 0;
 	right: 0;
 	margin: 0 auto;
-	width: 12em;
+	width: 13em;
 	font-size: .9em;
 }
 
@@ -2134,9 +2135,9 @@ select:hover {
 	padding: .75em .25em;
 	z-index: 2;
 	min-width: 2.5em;
-	top: .25em;
-	right: .25em;
-	background-color: rgba(0, 0, 0, 0.7);
+	top: .35em;
+	left: .75em;
+	background-color: rgba(37, 185, 114, 0.9);
 	border-radius: 50%;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 	font-size: .75em;
@@ -2148,7 +2149,7 @@ select:hover {
 	padding: .15em;
 	z-index: 2;
 	top: .2em;
-	right: 2.1em;
+	right: .5em;
 	font-size: 1.25em;
 	color: white;
 	background-color: rgba(0, 0, 0, 0.6);
@@ -2162,7 +2163,7 @@ select:hover {
 
 .grabber-expand {
 	padding: .35em;
-	right: 4.8em;
+	right: 2.75em;
 	top: .3em;
 }
 
