--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="home-demo">
-        <div class="home-demo-blurb">My cache for an example</div>
+        <div class="home-demo-blurb">View my cache!</div>
 
         <a href="/u/kershner25"><div class="btn green-btn">u/kershner25</div></a>
     </div>
@@ -91,7 +91,7 @@
         </div>
 
         <div class="home-about-section">
-            GifCache is written in Python utilizing the Django web framework.
+            GifCache is written in Python and JavaScript utilizing the Django web framework.
             <a href="https://github.com/kershner/gifcache" class="code-link-wrapper animate">
                 <div class="code-link animate">
                         <i class="fa fa-github"></i>
@@ -99,20 +99,23 @@
                 </div>
             </a>
         </div>
+    </div>
+</div>
 
-        <div class="home-about-section">
-            <div class="home-whatsnew">
-                <div class="home-whatsnew-title">What's New</div>
+<div class="home-section animate-bg" style="color: white;">
+    <div class="home-whatsnew">
+        <div class="home-whatsnew-title">What's New</div>
 
-                <div class="home-whatsnew-version">v1.0</div>
-                <div class="home-whatsnew-date">July 2015</div>
+        <div class="home-whatsnew-version">v1.0</div>
+        <div class="home-whatsnew-date">July 2015</div>
 
-                <div class="home-whatsnew-notes">
-                    <div>- Site launched!</div>
-                    <div>- Added mp4, gfycat, webm, and gifv support</div>
-                    <div>- Chrome extension coming soon!</div>
-                </div>
-            </div>
+        <div class="home-whatsnew-notes">
+            <div>- Site launched!</div>
+            <div>- Added mp4, gfycat, webm, and gifv support</div>
+            <div>- Added bulk GIF operations</div>
+            <div>- Added GifGrabber - add GIFs directly from reddit</div>
+            <div>- Added party mode for all tag groups</div>
+            <div>- Chrome extension coming soon!</div>
         </div>
     </div>
 
